--- a/litreview/blog/templates/blog/subscription-page.html
+++ b/litreview/blog/templates/blog/subscription-page.html
@@ -10,8 +10,10 @@
     {% include 'blog/subscribe.html' %}
 </div>
 
-{% include 'blog/display-subscribers.html' %}
-
+<h3 class="text-center p-3 my-3">Abonnements</h3>
+<div class='container-fluid row '>  
+    {% include 'blog/display-subscribers.html' %}
+</div>
 
 
 
