--- a/litreview/blog/templates/blog/unsubscribe.html
+++ b/litreview/blog/templates/blog/unsubscribe.html
@@ -1,3 +1,13 @@
-<div class="col-lg-2 mt-2">
-    <button type= 'submit' class="btn btn-outline-secondary"  id="button-addon2">Se désabonner</button> 
-</div>
+
+    
+    <div class="col-lg-2 mt-2">
+        <form method="POST" action= "{% url 'unsubscribe' user_follows.id %}">
+            {% csrf_token %}
+            <button type='submit'  class="btn btn-outline-secondary"  id="button-addon2">Désabonner</button> 
+            <p>ID  : {{user_follows.id }}</p>
+        </form>
+    </div>
+    
+
+
+
