--- a/litreview/blog/templates/blog/display-subscribers.html
+++ b/litreview/blog/templates/blog/display-subscribers.html
@@ -1,20 +1,31 @@
-<h3 class="text-center p-3 my-3">Abonnements</h3>
-<div class='container-fluid row '>    
-{% for usr  in following %}
+
+{% for user_follows  in following_user %}
     <div class="alert alert-info col-lg-10 text-center">
-        {{usr.followed_user}}
+        
+        {{user_follows.followed_user}}
+        
+  
     </div>    
     {% include 'blog/unsubscribe.html' %}
-    
 
     {% endfor %}
     
-    <h3 class="text-center p-3 my-3">Abonnés</h3>
-    {% for username in followed_by %}
-    <div class="alert alert-primary  col-lg-10 text-center">
-        {{username}}
-    </div>        
+    {% if not following_user%}
+    <p class= "text-center">Vous n'avez pas encore d'abonnemts</p>
+    {% endif %}
+
+
     
-</div>
+<h3 class="text-center p-3 my-3">Abonnés</h3>
+{% for username in followed_by_user %}
+<div class="alert alert-primary  col-lg-10 text-center">
+    {{username.user}}
+</div>        
 
 {% endfor %}
+
+{% if not followed_by_user%}
+<p class= "text-center">Vous n'avez pas encore d'abonné</p>
+{% endif %}
+
+
