--- a/litreview/templates/navbar.html
+++ b/litreview/templates/navbar.html
@@ -22,7 +22,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'subscribe' %}">Abonnements</a>
+                    <a class="nav-link" href="{% url 'main-subscribe-page' %}">Abonnements</a>
                 </li>
                 
                 <li class="nav-item">
