--- a/litreview/blog/templates/blog/subscription-page.html
+++ b/litreview/blog/templates/blog/subscription-page.html
@@ -10,6 +10,11 @@
     {% include 'blog/subscribe.html' %}
 </div>
 
+<div class="container-fluid">    
+    {% if message %}
+    <p class="text-center p-3 my-3">{{message}}</p>
+    {% endif %}
+</div>
 
 <h3 class="text-center p-3 my-3">Abonnements</h3>
 <div class='container-fluid row '>  
