--- a/litreview/blog/templates/blog/buttons-top-review.html
+++ b/litreview/blog/templates/blog/buttons-top-review.html
@@ -1,6 +1,6 @@
 
 
-<div class="container-fluid p-3 my-3 border">
+<div class="container-fluid p-3 my-3">
     <div class="row">  
 
         <div class="col-sm-6">    
