main feed reviews fixed

--- a/litreview/blog/templates/blog/review-flux.html
+++ b/litreview/blog/templates/blog/review-flux.html
@@ -1,7 +1,7 @@
 {% load static %}
 <div class="container-fluid row">
         <div class="col-sm-6">
-            <p> {{post.user}} avez publié une critique: </p>
+            <p> {{post.user}} a publié une critique: </p>
         </div>
         <div class="col-sm-6 " style="text-align:right">
             <p> {{post.time_created}} </p>
