--- a/litreview/blog/templates/blog/posts.html
+++ b/litreview/blog/templates/blog/posts.html
@@ -7,7 +7,7 @@
         
             {% if post.user_id == user.id %}
             <div class='container p-3 my-3 border'>
-                {% include 'blog/ticket-flux.html' %}
+                {% include 'blog/ticket-feed.html' %}
                 {% include 'blog/button-modify-ticket.html' %}
             </div>
             {% endif %}
@@ -15,7 +15,7 @@
     {% elif post.content_type == 'REVIEW' %}        
             {% if post.user_id == user.id %}
             <div class='container p-3 my-3 border'>
-                {% include 'blog/review-flux.html' %}
+                {% include 'blog/review-feed.html' %}
                 {% include 'blog/button-modify-review.html' %}
             </div>   
             {% endif %}
