--- a/litreview/authenticate/templates/authenticate/signup.html
+++ b/litreview/authenticate/templates/authenticate/signup.html
@@ -5,6 +5,7 @@
 {% block content %}
 
 <div class='container p-3 my-3'>
+<h2 class = text-center> Inscrivez-vous</h2>
 <form method='post'>
     {% csrf_token %}
     {{ form|crispy }}
